--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,14 @@
 //----------------------START "DO NOT MODIFY" SECTION------------------------------
 def ghidraInstallDir
 
-if (System.env.GHIDRA_INSTALL_DIR) {
-	ghidraInstallDir = System.env.GHIDRA_INSTALL_DIR
+
+if (System.getenv("GHIDRA_INSTALL_DIR")) {
+	ghidraInstallDir = System.getenv("GHIDRA_INSTALL_DIR")
 }
 else if (project.hasProperty("GHIDRA_INSTALL_DIR")) {
 	ghidraInstallDir = project.getProperty("GHIDRA_INSTALL_DIR")
 }
+
 
 if (ghidraInstallDir) {
 	apply from: new File(ghidraInstallDir).getCanonicalPath() + "/support/buildExtension.gradle"
